<resources>
    <string name="app_name">人脸识别后台系统</string>
    <string name="login">登录</string>
    <string name="config_inter">配置网络</string>
    <string name="name">用户名</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="add">添加</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="input_tip">请输入wifi名称</string>
    <string name="input_type">请输入wifi加密类型(WPA、WEP、OPEN)</string>
    <string name="search">wifi扫描</string>
    <string name="input_password">请输入wifi密码</string>
    <string name="wifi_list">WIFI列表</string>
    <string name="buildQr">生成二维码</string>
    <string name="wifiConfig">wifi配置</string>
    <string name="ethConfig">以太网配置</string>
    <string name="please_input">请输入</string>
    <string name="logout">退出当前账号</string>


    <dimen name="title_size">24dp</dimen>
    <dimen name="bigger_txt">20sp</dimen>
    <dimen name="normal_txt">18sp</dimen>
    <dimen name="small_txt">16sp</dimen>
    <dimen name="title_m_b">60dp</dimen>
    <dimen name="login_p">20dp</dimen>
    <dimen name="fifty_h">50dp</dimen>
    <dimen name="edit_draw_p">15dp</dimen>
    <dimen name="edit_btn_m_t">30dp</dimen>
    <dimen name="gridView_column_width">150dp</dimen>
    <dimen name="title_p_lr">15dp</dimen>
    <dimen name="title_h">50dp</dimen>
    <dimen name="m_p">15dp</dimen>
</resources>
