<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <com.cpzx.facerecog.widget.MyScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_wifiname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty_h"
                android:background="@drawable/infor_input_edit"
                android:ellipsize="end"
                android:hint="@string/input_tip"
                android:paddingLeft="@dimen/m_p"
                android:singleLine="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/tip_txt_color" />

            <EditText
                android:id="@+id/et_wifistyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty_h"
                android:background="@drawable/infor_input_edit"
                android:ellipsize="end"
                android:hint="@string/input_type"
                android:paddingLeft="@dimen/m_p"
                android:singleLine="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/tip_txt_color" />

            <EditText
                android:id="@+id/et_wifipassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty_h"
                android:background="@drawable/infor_input_edit"
                android:ellipsize="end"
                android:hint="@string/input_password"
                android:paddingLeft="@dimen/m_p"
                android:singleLine="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/tip_txt_color" />


            <Button
                android:id="@+id/btn_connect"
                style="@style/btn"
                android:layout_margin="@dimen/m_p"
                android:text="@string/buildQr"
                android:textColor="#ffffff" />


            <com.cpzx.facerecog.widget.NoScrollListView
                android:id="@+id/lv_wifi_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/iv_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="20dp"
                android:visibility="gone" />
        </LinearLayout>
    </com.cpzx.facerecog.widget.MyScrollView>
</LinearLayout>